--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^2.15.8",
     "nuxt-buefy": "^0.4.24",
     "vue": "^2.7.10",
+    "vue-iframes": "^0.0.20",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
@@ -25,6 +26,7 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.23",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "vue-friendly-iframe": "^0.20.0"
   }
 }
